--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 show_downloads: false
-logo: https://github.com/WeisongZhao/MyWeb2/blob/master/img/partner/me.jpg
+logo: ./imgs/me.jpg
